# wireframe

./: CMakeLists.txt  README.md  main.cpp  sample.s3d
model/config/: CMakeLists.txt  ConfigKeeper.cpp  ConfigKeeper.h
model/engine/: BSpline.cpp  BSpline.h  CMakeLists.txt  Camera.cpp  Camera.h  Circle.cpp  Circle.h  Polyline3D.cpp  Polyline3D.h  Wireframe.cpp  Wireframe.h
widgets/: CMakeLists.txt  resources.qrc
widgets/include/: AboutWindow.h  CanvasArea.h  EditorWindow.h  MainWindow.h  PointMenu.h  RenderArea.h
widgets/resources/: README.md
widgets/src/: AboutWindow.cpp  CanvasArea.cpp  EditorWindow.cpp  MainWindow.cpp  PointMenu.cpp  RenderArea.cpp
